--- a/scss/_normalize.scss
+++ b/scss/_normalize.scss
@@ -7,4 +7,8 @@
 body {
   padding: 0;
   margin: 0;
+  font-family: Raleway, sans-serif;
+  font-size: 14px;
+  background-color: $very-dark-blue;
+  color: white;
 }
