--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -59,11 +59,8 @@
   align-items: center;
   border-radius: 8px;
 }
-.icon__bg + .icon__bg {
-  margin-left: 15px;
-}
 
-.card__data p {
+.card__data > p {
   color: $pale-blue;
 }
 
@@ -100,10 +97,10 @@
 
 .data__number {
   font-size: 2.5rem;
-  color: $very-dark-blue !important;
+  color: $very-dark-blue;
 }
 .data__label {
-  color: $grayish-blue !important;
+  color: $grayish-blue;
   margin-left: 1ch;
 }
 
@@ -115,7 +112,7 @@
 }
 .progress {
   height: calc(1rem - 2px);
-  width: 70%;
+  width: 81.5%;
   background: linear-gradient(to right, $salmon, $fuschia);
   border-radius: calc(1rem - 2px);
   position: relative;
@@ -129,4 +126,5 @@
   z-index: 1;
   height: calc(1rem - 4px);
   width: calc(1rem - 4px);
+  cursor: pointer;
 }
